# rpilot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: ci.yml  release.yml  tag.yml
.github/workflows/: release.yml  tag.yml
src/: common.rs  main.rs
src/commands/: add.rs  apply.rs  current.rs  edit.rs  init.rs  list.rs  mod.rs  new.rs  remove.rs  show.rs
