[package]
name = "rpilot"
version = "0.1.0"
authors = ["Makoto Kinoshita <mkinoshi12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
exitfailure = "0.5.1"
directories = "3.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
regex = "1"
tempfile="3.2.0"
