[package]
name = "rpilot"
version = "0.1.0"
authors = ["Makoto Kinoshita <mkinoshi12@gmail.com>"]
license = "MIT"
edition = "2018"
description = "A CLI tool to manage env files"
readme = "README.md"
homepage = "https://github.com/mkinoshi/rpilot"
repository = "https://github.com/mkinoshi/rpilot"
keywords = ["cli", "env", "rust"]
categories = ["command-line-utilities"]

[dependencies]
structopt = { version = "0.3" }
exitfailure = "0.5.1"
directories = "3.0"
uuid = { version = "0.8", features = ["v4"] }
data-encoding = { version = "2.3.2" }
ring = { version = "0.16.20" }
savefile = { version = "0.7.4" }
savefile-derive = { version = "0.7.4" }
base64 = { version = "0.13.0" }
log = { version = "0.4.0" }
env_logger = { version = "0.8.3" }
edit = { version = "0.1.3" }
thiserror = { version = "1.0" }

[dev-dependencies]
regex = "1"
tempfile="3.2.0"
tempdir="0.3.7"
